# rustpen

./: .gitignore  Cargo.toml  build.rs
bindings/: BufferMessage.ts  ColorRange.ts  ContextMessage.ts  EditorBufferContext.ts  EditorContext.ts  EditorCursorContext.ts  EditorMode.ts  EditorWindow.ts  InputMessage.ts  Rgb.ts  ServerMessages.ts
src/: editor.rs  editor_modes.rs  lib.rs  main.rs
src/buffers/: editor_buffer.rs  explorer_buffer.rs  mod.rs
src/command/: mod.rs
src/insert/: mod.rs
src/normal/: mod.rs
src/server/: mod.rs  server_messages.rs
ts-plugins/: package-lock.json  package.json
