[package]
name = "rustpen"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
signal-hook = "0.3.17"
termion = "4.0.2"
dirs = "5.0.1"
fs_extra = "1.3.0"
serde_json = "1.0.128"
serde = { version = "1.0.210", features= ["derive"] }
ts-rs = { version = "10.0.0", features = ["serde-compat"]}

[build-dependencies]
dirs = "5.0.1"
fs_extra = "1.3.0"
